--- a/ShopHub.API/appsettings.json
+++ b/ShopHub.API/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ShopHubDb": "Server=MOELSHERIF;Database=ShopHub;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+    "ShopHubDb": "Server=MOELSHERIF;Database=ShopHub;Trusted_Connection=True;TrustServerCertificate=True"
+    //"ShopHubDb": "Data Source=(localdb)\\ProjectModels;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
