--- a/ShopHub.API/appsettings.json
+++ b/ShopHub.API/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ShopHubDb": "Server=MOELSHERIF;Database=ShopHub;Trusted_Connection=True;TrustServerCertificate=True"
+    "ShopHubDb": "Server=MOELSHERIF;Database=ShopHub;Trusted_Connection=True;TrustServerCertificate=True",
     //"ShopHubDb": "Data Source=(localdb)\\ProjectModels;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "redis": "localhost"
   }
 }
