--- a/ShopHub.API/appsettings.json
+++ b/ShopHub.API/appsettings.json
@@ -10,5 +10,16 @@
     "ShopHubDb": "Server=MOELSHERIF;Database=ShopHub;Trusted_Connection=True;TrustServerCertificate=True",
     //"ShopHubDb": "Data Source=(localdb)\\ProjectModels;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
     "redis": "localhost"
+  },
+  "EmailSetting": {
+    "Port": 465,
+    "From": "m.o.elsherif2002@gmail.com",
+    "Username": "m.o.elsherif2002@gmail.com",
+    "Password": "qhmnitmgykpjalql",
+    "Smtp": "smtp.gmail.com"
+  },
+  "Token": {
+    "Secret": "!@@#ShopHub@@!!--$%!@##@!#$$543!!@#76#$$",
+    "Issuer": "https://localhost:44343/"
   }
 }
